test(megatron): temporarily disable zero_bubble_pipeline_parallelism UT

--- a/examples/torchtitan/configs/MI300X/llama3.1_405B-pretrain.yaml
+++ b/examples/torchtitan/configs/MI300X/llama3.1_405B-pretrain.yaml
@@ -18,6 +18,9 @@ modules:
       training:
         local_batch_size: 2
 
+      metrics:
+        log_freq: 1
+
       optimizer:
         lr: 8.0e-5
 
