--- a/examples/torchtitan/configs/MI300X/qwen3_0.6B-pretrain.yaml
+++ b/examples/torchtitan/configs/MI300X/qwen3_0.6B-pretrain.yaml
@@ -20,6 +20,9 @@ modules:
       lr_scheduler:
         warmup_steps: 2  # lr scheduler warm up, 20% total steps
 
+      metrics:
+        log_freq: 1
+
       training:
         local_batch_size: 4
         seq_len: 4096
