--- a/examples/torchtitan/configs/MI300X/qwen3_32B-pretrain.yaml
+++ b/examples/torchtitan/configs/MI300X/qwen3_32B-pretrain.yaml
@@ -12,6 +12,9 @@ modules:
     model: qwen3_32b.yaml
     overrides:
 
+      metrics:
+        log_freq: 1
+
       optimizer:
         name: "AdamW"
         lr: 3.0e-4
