feat(torchtitan): add mock HuggingFace dataset support for offline testing

--- a/primus/configs/modules/torchtitan/pre_trainer.yaml
+++ b/primus/configs/modules/torchtitan/pre_trainer.yaml
@@ -33,6 +33,7 @@ profiling:
   save_traces_folder: profile_traces
 
 training:
+  mock_data: true
   dataset: c4
   dataset_path: null
   deterministic: false
