--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = third_party/Megatron-LM
 	url = https://github.com/NVIDIA/Megatron-LM.git
 	branch = main
+[submodule "third_party/AMD-Hybrid-Models"]
+	path = third_party/AMD-Hybrid-Models
+	url = https://github.com/AMD-AGI/AMD-Hybrid-Models.git
