--- a/examples/megatron/configs/MI300X/deepseek_v2_lite-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/deepseek_v2_lite-pretrain.yaml
@@ -84,6 +84,9 @@ modules:
       use_turbo_attention: true
       use_turbo_grouped_mlp: true
 
+      # fp8: e4m3
+      # fp8_recipe: blockwise  # tensorwise, blockwise
+
       # deepep
       use_turbo_deepep: false
 
