feat: titain deepseek add turbo attn

--- a/examples/torchtitan/configs/MI300X/deepseek_v3_16b-pretrain.yaml
+++ b/examples/torchtitan/configs/MI300X/deepseek_v3_16b-pretrain.yaml
@@ -71,6 +71,10 @@ modules:
         enable: true
         components: ["loss"]     # ["model", "loss"]
 
+      primus_turbo:
+        enable_primus_turbo: true
+        enable_attention_float8: false
+
       # quantize:
       #   linear:
       #     float8:
