--- a/primus/configs/models/torchtitan/llama3.3_70B-fp8.yaml
+++ b/primus/configs/models/torchtitan/llama3.3_70B-fp8.yaml
@@ -7,5 +7,4 @@ model:
   flavor: "70B"
   hf_assets_path: "meta-llama/Llama-3.3-70B-Instruct"
   converters:
-    - quantize.linear.float8
-    - quantize.grouped_mm.float8
+    - "float8"
