--- a/examples/torchtitan/configs/MI300X/llama3.1_405B-pretrain.yaml
+++ b/examples/torchtitan/configs/MI300X/llama3.1_405B-pretrain.yaml
@@ -31,5 +31,5 @@ modules:
         mode: full
 
       primus_turbo:
-        enable_primus_turbo: true
+        enable_primus_turbo: false
         enable_attention_float8: false
