--- a/examples/torchtitan/configs/llama3.1_70B-FP8-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_70B-FP8-pretrain.yaml
@@ -25,7 +25,7 @@ modules:
       training:
         batch_size: 6
         compile: true
-        steps: 10
+        steps: 20
 
       optimizer:
         lr: 1.5e-4
@@ -36,10 +36,11 @@ modules:
       float8:
         enable_fsdp_float8_all_gather: true
         precompute_float8_dynamic_scale_for_fsdp: true
+        force_recompute_fp8_weight_in_bwd: true
         filter_fqns: ["output"]
 
       primus_turbo:
         enable_primus_turbo : true
         use_turbo_attention: true
         enable_attention_float8 : false
-        use_turbo_fp8_gemm: false  # 禁用Primus-Turbo FP8（与PyTorch FP8冲突）
+        use_turbo_fp8_gemm: false  
