--- a/examples/megatron/configs/MI300X/llama2_7B-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/llama2_7B-pretrain.yaml
@@ -80,5 +80,5 @@ modules:
       # sequence_parallel: 1
 
       # Cross entropy flags
-      cross_entropy_fusion_impl: "te"
-      cross_entropy_loss_fusion: true
+      # cross_entropy_fusion_impl: "te"
+      # cross_entropy_loss_fusion: true
