--- a/examples/megatron/configs/MI355X/deepseek_v2_lite-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/deepseek_v2_lite-pretrain.yaml
@@ -96,5 +96,5 @@ modules:
       turbo_sync_free_moe_stage: 0
 
       # Cross entropy flags
-      cross_entropy_fusion_impl: "te"
-      cross_entropy_loss_fusion: true
+      # cross_entropy_fusion_impl: "te"
+      # cross_entropy_loss_fusion: true
