--- a/examples/megatron/configs/MI300X/qwen2.5_7B-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/qwen2.5_7B-pretrain.yaml
@@ -74,5 +74,5 @@ modules:
       use_turbo_grouped_mlp: true
 
       # Cross entropy flags
-      cross_entropy_fusion_impl: "te"
-      cross_entropy_loss_fusion: true
+      # cross_entropy_fusion_impl: "te"
+      # cross_entropy_loss_fusion: true
