--- a/examples/maxtext/config/MI355X/deepseek_v2_16B-pretrain.yaml
+++ b/examples/maxtext/config/MI355X/deepseek_v2_16B-pretrain.yaml
@@ -1,6 +1,6 @@
 work_group: ${PRIMUS_TEAM:amd}
 user_name: ${PRIMUS_USER:root}
-exp_name: ${PRIMUS_EXP_NAME:llama3_8B-pretrain}
+exp_name: ${PRIMUS_EXP_NAME:deepseek_v2_16B-pretrain}
 workspace: ./output
 
 modules:
@@ -9,9 +9,9 @@ modules:
     config: pre_trainer.yaml
 
     # model to run
-    model: llama3_8B.yaml
+    model: deepseek_v2_16B.yaml
     overrides:
-      run_name: "llama3_8b_training"
+      run_name: "deepseek_v2_16b_training"
       base_output_directory: "./output"
       steps: 50
       log_period: 10
@@ -28,11 +28,22 @@ modules:
       # inter-node parallelism strategy
       dcn_data_parallelism: -1
       dcn_fsdp_parallelism: 1
+      dcn_pipeline_parallelism: 1
+      dcn_tensor_parallelism: 1
+      dcn_sequence_parallelism: 1
 
       # intra-node parallelism strategy
-      ici_fsdp_parallelism: 8
+      ici_fsdp_parallelism: 1
       ici_data_parallelism: 1
+      ici_expert_parallelism: -1
+      ici_sequence_parallelism: 1
+      ici_tensor_parallelism: 1
+      ici_pipeline_parallelism: 1
 
+      megablox: False
+      capacity_factor: 1.25
+      sparse_matmul: False
+      sharding_tolerance: 0.05
       remat_policy: "minimal_flash"
-      max_target_length: 8192
-      per_device_batch_size: 4
+      max_target_length: 4096
+      per_device_batch_size: 8
