--- a/examples/maxtext/config/MI355X/llama3_70B-pretrain.yaml
+++ b/examples/maxtext/config/MI355X/llama3_70B-pretrain.yaml
@@ -1,6 +1,6 @@
 work_group: ${PRIMUS_TEAM:amd}
 user_name: ${PRIMUS_USER:root}
-exp_name: ${PRIMUS_EXP_NAME:llama3_8B-pretrain}
+exp_name: ${PRIMUS_EXP_NAME:llama3_70B-pretrain}
 workspace: ./output
 
 modules:
@@ -9,9 +9,9 @@ modules:
     config: pre_trainer.yaml
 
     # model to run
-    model: llama3_8B.yaml
+    model: llama3_70B.yaml
     overrides:
-      run_name: "llama3_8b_training"
+      run_name: "llama3_70b_training"
       base_output_directory: "./output"
       steps: 50
       log_period: 10
@@ -28,11 +28,18 @@ modules:
       # inter-node parallelism strategy
       dcn_data_parallelism: -1
       dcn_fsdp_parallelism: 1
+      dcn_pipeline_parallelism: 1
+      dcn_tensor_parallelism: 1
+      dcn_sequence_parallelism: 1
 
       # intra-node parallelism strategy
       ici_fsdp_parallelism: 8
       ici_data_parallelism: 1
+      ici_sequence_parallelism: 1
+      ici_tensor_parallelism: 1
+      ici_pipeline_parallelism: 1
+      ici_tensor_sequence_parallelism: -1
 
-      remat_policy: "minimal_flash"
+      remat_policy: "full"
       max_target_length: 8192
-      per_device_batch_size: 4
+      per_device_batch_size: 10
