--- a/examples/megatron/configs/MI355X/deepseek_v2_lite-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/deepseek_v2_lite-pretrain.yaml
@@ -81,8 +81,8 @@ modules:
 
       # Turbo
       enable_primus_turbo: true
-      use_turbo_attention: false
-      use_turbo_grouped_mlp: false
+      use_turbo_attention: true
+      use_turbo_grouped_mlp: true
 
       # deepep
       use_turbo_deepep: false
