--- a/examples/megatron/configs/MI355X/llama3.1_8B-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/llama3.1_8B-pretrain.yaml
@@ -72,5 +72,5 @@ modules:
 
       # Turbo
       enable_primus_turbo: true
-      use_turbo_attention: false
-      use_turbo_grouped_mlp: false
+      use_turbo_attention: true
+      use_turbo_grouped_mlp: true
