--- a/primus/configs/modules/maxtext/pre_trainer.yaml
+++ b/primus/configs/modules/maxtext/pre_trainer.yaml
@@ -9,14 +9,15 @@ async_checkpointing: False
 profiler: "xplane"
 skip_first_n_steps_for_profiler: 3
 profiler_steps: 1
-dataset_type: "synthetic"
+
+# data
+dataset_type: "hf"
+hf_path: "allenai/c4"  # for using https://huggingface.co/datasets/allenai/c4
+hf_data_dir: "en"
+hf_train_files: ""
 
 attention: "cudnn_flash_te"
 use_iota_embed: True
-megablox: False
-capacity_factor: 1.25
-sparse_matmul: False
-sharding_tolerance: 0.05
 shardy: False
 
 remat_policy: 'full'
