--- a/examples/megatron/configs/MI300X/deepseek_v3-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/deepseek_v3-pretrain.yaml
@@ -86,11 +86,11 @@ modules:
       use_turbo_attention: true
       use_turbo_grouped_mlp: true
 
-      overlap_moe_expert_parallel_comm: true
-      patch_moe_overlap: true
-      delay_wgrad_compute: false
-      moe_shared_expert_overlap: false
-      moe_router_dtype: fp32
+      # MoE overlap
+      # overlap_moe_expert_parallel_comm: true
+      # patch_moe_overlap: true
+      # delay_wgrad_compute: false
+      # moe_shared_expert_overlap: false
 
       # Cross entropy flags
       # cross_entropy_fusion_impl: "te"
