enable te cross entropy fusion by default

--- a/examples/megatron/configs/MI300X/deepseek_v3-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/deepseek_v3-pretrain.yaml
@@ -93,5 +93,5 @@ modules:
       # moe_shared_expert_overlap: false
 
       # Cross entropy flags
-      # cross_entropy_fusion_impl: "te"
-      # cross_entropy_loss_fusion: true
+      cross_entropy_fusion_impl: "te"
+      cross_entropy_loss_fusion: true
