--- a/examples/megatron/configs/MI300X/deepseek_v3-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/deepseek_v3-pretrain.yaml
@@ -19,6 +19,7 @@ modules:
       moe_router_force_load_balancing: true
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 50
+      moe_router_dtype: fp32
 
       # hyber parameters
       train_iters: 50
@@ -60,12 +61,11 @@ modules:
       moe_use_legacy_grouped_gemm: true
       # fused topk router with aux score
       moe_use_fused_router_with_aux_score: false
-      # pad 192/128 for deepseek attention
-      fused_padded_mla_attention: false
 
       # Performance toggles
-      #multi_latent_attention: false
+      multi_latent_attention: false
       #apply_rope_fusion: true
+      mtp_num_layers: null
 
       # ckpt
       finetune: false
