--- a/examples/megatron/configs/MI300X/deepseek_v2_lite-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/deepseek_v2_lite-pretrain.yaml
@@ -94,7 +94,8 @@ modules:
       turbo_deepep_num_cu: 32
       turbo_deepep_use_comm_stream: false
 
-      # sync-free moe support stage 1-2, 0 means not use sync-free moe
+      # sync-free moe support stage 0-3, 0 means not use sync-free moe
+      # stage 3 is completely no gpu-cpu sync in MoE, but cost more memory
       # stage 2 is recommended for better performance
       turbo_sync_free_moe_stage: 0
 
