--- a/examples/megatron/configs/MI355X/deepseek_v2_lite-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/deepseek_v2_lite-pretrain.yaml
@@ -22,8 +22,8 @@ modules:
 
       # hyber parameters
       train_iters: 50
-      micro_batch_size: 4
-      global_batch_size: 640
+      micro_batch_size: 12
+      global_batch_size: 768
       seq_length: ${PRIMUS_SEQ_LENGTH:4096}
       max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:4096}
       lr: 1.0e-5
@@ -80,7 +80,7 @@ modules:
       eval_iters: 0
 
       # Turbo
-      enable_primus_turbo: true
+      enable_primus_turbo: false
       use_turbo_attention: false
       use_turbo_grouped_mlp: false
 
