--- a/examples/torchtitan/configs/MI355X/llama3.1_8B-FP8-pretrain.yaml
+++ b/examples/torchtitan/configs/MI355X/llama3.1_8B-FP8-pretrain.yaml
@@ -30,10 +30,12 @@ modules:
         mode: "none"  # ["none", "selective", "full"]
         selective_ac_option: "op"  # "int" = ac every positive int layer or 'op', ac based on ops policy
 
-      float8:
-        enable_fsdp_float8_all_gather: true
-        precompute_float8_dynamic_scale_for_fsdp: true
-        filter_fqns: ["output"]
+      quantize:
+        linear:
+          float8:
+            enable_fsdp_float8_all_gather: true
+            precompute_float8_dynamic_scale_for_fsdp: true
+            filter_fqns: ["output"]
 
       primus_turbo:
         enable_primus_turbo: true
