Revert "refactor(torchtitan): rollback Titan to 99c0cb2(20250907) and stabilize trainer UTs (#262)"
This reverts commit 1e2e1b1acb178855cf512de802d494b09c668431.

--- a/primus/configs/models/torchtitan/llama3.1_70B-fp8.yaml
+++ b/primus/configs/models/torchtitan/llama3.1_70B-fp8.yaml
@@ -7,4 +7,5 @@ model:
   flavor: "70B"
   hf_assets_path: "meta-llama/Llama-3.1-8B"
   converters:
-    - "float8"
+    - quantize.linear.float8
+    - quantize.grouped_mm.float8
