--- a/examples/megatron/configs/MI355X/deepseek_v2_lite-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/deepseek_v2_lite-pretrain.yaml
@@ -63,7 +63,7 @@ modules:
       # pad 192/128 for deepseek attention
       fused_padded_mla_attention: false
 
-      multi_latent_attention: false
+        #multi_latent_attention: true
 
       # ckpt
       finetune: false
@@ -80,7 +80,7 @@ modules:
       eval_iters: 0
 
       # Turbo
-      enable_primus_turbo: true
+      enable_primus_turbo: false
       use_turbo_attention: false
       use_turbo_grouped_mlp: false
 
