--- a/examples/torchtitan/configs/MI300X/llama3.1_70B-BF16-pretrain.yaml
+++ b/examples/torchtitan/configs/MI300X/llama3.1_70B-BF16-pretrain.yaml
@@ -25,6 +25,7 @@ modules:
       training:
         local_batch_size: 4
         seq_len: 8192
+        mock_data: false
         steps: 50
 
       optimizer:
