--- a/examples/torchtitan/configs/MI355X/llama3.1_70B-BF16-pretrain.yaml
+++ b/examples/torchtitan/configs/MI355X/llama3.1_70B-BF16-pretrain.yaml
@@ -24,6 +24,8 @@ modules:
 
       training:
         local_batch_size: 4
+        seq_len: 8192
+        mock_data: false
         steps: 50
 
       optimizer:
