--- a/examples/torchtitan/configs/MI355X/llama3.1_70B-FP8-pretrain.yaml
+++ b/examples/torchtitan/configs/MI355X/llama3.1_70B-FP8-pretrain.yaml
@@ -24,6 +24,8 @@ modules:
 
       training:
         local_batch_size: 3
+        seq_len: 8192
+        mock_data: false
         steps: 50
 
       optimizer:
@@ -32,7 +34,7 @@ modules:
       activation_checkpoint:
         mode: full
 
-      fquantize:
+      quantize:
         linear:
           float8:
             enable_fsdp_float8_all_gather: true
