--- a/examples/torchtitan/configs/MI355X/llama3.1_8B-BF16-pretrain.yaml
+++ b/examples/torchtitan/configs/MI355X/llama3.1_8B-BF16-pretrain.yaml
@@ -25,6 +25,8 @@ modules:
 
       training:
         local_batch_size: 3
+        seq_len: 8192
+        mock_data: false
         steps: 50
 
       activation_checkpoint:
