Revert "update mi300 ds model yamls with mla"
This reverts commit eabc2f871a726e104450ca4a7a6501f6ae5c00c9.

--- a/examples/megatron/configs/MI300X/deepseek_v2_lite-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/deepseek_v2_lite-pretrain.yaml
@@ -63,7 +63,7 @@ modules:
       # pad 192/128 for deepseek attention
       fused_padded_mla_attention: false
 
-      multi_latent_attention: true
+      multi_latent_attention: false
 
       # ckpt
       finetune: false
@@ -80,9 +80,9 @@ modules:
       eval_iters: 0
 
       # Turbo
-      enable_primus_turbo: false
-      use_turbo_attention: false
-      use_turbo_grouped_mlp: false
+      enable_primus_turbo: true
+      use_turbo_attention: true
+      use_turbo_grouped_mlp: true
 
       # fp8: e4m3
       # fp8_recipe: blockwise  # tensorwise, blockwise
