--- a/primus/configs/modules/torchtitan/pre_trainer.yaml
+++ b/primus/configs/modules/torchtitan/pre_trainer.yaml
@@ -156,4 +156,6 @@ primus_turbo:
   use_turbo_attention: true
   use_turbo_async_tp: true
   use_turbo_mx_linear: true
+  use_turbo_grouped_mm: false
+  use_moe_fp8: true
   enable_embedding_autocast: true
