--- a/examples/megatron/configs/MI300X/mixtral_8x22B_v0.1-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/mixtral_8x22B_v0.1-pretrain.yaml
@@ -1,7 +1,7 @@
 work_group: ${PRIMUS_TEAM:amd}
 user_name: ${PRIMUS_USER:root}
 exp_name: ${PRIMUS_EXP_NAME:mixtral_8x22B_v0.1-pretrain}
-workspace: ./output
+workspace: ${PRIMUS_WORKSPACE:./output}
 
 modules:
   pre_trainer:
