--- a/examples/megatron/exp_pretrain.yaml
+++ b/examples/megatron/exp_pretrain.yaml
@@ -1,7 +1,7 @@
 work_group: ${PRIMUS_TEAM:amd}
 user_name: ${PRIMUS_USER:root}
 exp_name: &exp_name ${PRIMUS_EXP_NAME:exp_pretrain}
-workspace: ./output
+workspace: ${PRIMUS_WORKSPACE:./output}
 
 modules:
   pre_trainer:
