--- a/primus/configs/models/megatron/moe_proxy_single_node.yaml
+++ b/primus/configs/models/megatron/moe_proxy_single_node.yaml
@@ -5,11 +5,8 @@ tokenizer_type: DeepSeekV2Tokenizer
 tokenizer_model: deepseek-ai/DeepSeek-V2-Lite
 
 # model
-# num_layers: 40
-# hidden_size: 4096
-# num_layers: 64
-num_layers: 56
-hidden_size: 2048
+num_layers: 48
+hidden_size: 3072
 num_attention_heads: 32
 group_query_attention: true
 num_query_groups: 8
@@ -19,6 +16,10 @@ multi_latent_attention: false
 apply_rope_fusion: true
 
 # moe
+# num_experts: 128
+# moe_router_topk: 2 # sparsity=64
+# moe_ffn_hidden_size: 2048
+
 num_experts: 256
 moe_router_topk: 4 # sparsity=64
 moe_ffn_hidden_size: 1024
