update deepseek_v3 config and load balance config

--- a/primus/configs/modules/torchtitan/pre_trainer.yaml
+++ b/primus/configs/modules/torchtitan/pre_trainer.yaml
@@ -35,6 +35,7 @@ profiling:
 
 training:
   mock_data: true
+  debug_moe_force_load_balance: false
   dataset: c4
   dataset_path: null
   deterministic: false
