--- a/examples/torchtitan/configs/MI300X/deepseek_v3_16b-pretrain.yaml
+++ b/examples/torchtitan/configs/MI300X/deepseek_v3_16b-pretrain.yaml
@@ -13,7 +13,7 @@ modules:
     model: deepseek_v3_16b.yaml
     overrides:
       profiling:
-        enable_profiling: false
+        enable_profiling: true
         save_traces_folder: "profile_trace"
         profile_freq: 10
         enable_memory_snapshot: false
@@ -38,10 +38,11 @@ modules:
         min_lr_factor: 0.1
 
       training:
+        debug_moe_force_load_balance: true
         local_batch_size: 4
         seq_len: 4096
         max_norm: 1.0            # grad norm clipping
-        steps: 10
+        steps: 15
         dataset: "c4_test"            # supported datasets: c4_test (2K), c4 (177M)
 
       parallelism:
@@ -64,11 +65,11 @@ modules:
         async_mode: "disabled"   # ["disabled", "async", "async_with_pinned_mem"]
 
       activation_checkpoint:
-        mode: "selective"        # ["none", "selective", "full"]
+        mode: "none"        # ["none", "selective", "full"]
         selective_ac_option: "op" # 'int' = ac every positive int layer or 'op', ac based on ops policy
 
       compile:
-        enable: false
+        enable: true
         components: ["model", "loss"]     # ["model", "loss"]
 
       primus_turbo:
@@ -77,7 +78,7 @@ modules:
         use_turbo_float8_linear: true
         enable_attention_float8: false
         use_turbo_grouped_mm: true
-        use_moe_fp8: true
+        use_moe_fp8: false
         
       # quantize:
       #   linear:
