--- a/examples/torchtitan/configs/MI300X/deepseek_v3_671b-pretrain.yaml
+++ b/examples/torchtitan/configs/MI300X/deepseek_v3_671b-pretrain.yaml
@@ -69,14 +69,15 @@ modules:
         selective_ac_option: "op" # 'int' = ac every positive int layer or 'op', ac based on ops policy
 
       compile:
-        enable: true
+        enable: false
         components: ["model", "loss"]     # ["model", "loss"]
 
       primus_turbo:
         enable_primus_turbo: true
         use_turbo_mx_linear: false
         use_turbo_float8_linear: false
-        enable_attention_float8: true
+        enable_attention_float8: false
+        use_classic_attention: true
         use_turbo_grouped_mm: true
         use_moe_fp8: false
 
