--- a/primus/configs/modules/torchtitan/pre_trainer.yaml
+++ b/primus/configs/modules/torchtitan/pre_trainer.yaml
@@ -155,6 +155,7 @@ primus_turbo:
   enable_primus_turbo : true
   enable_attention_float8 : false
   use_turbo_attention: true
+  use_classic_attention: false
   use_turbo_async_tp: true
   use_turbo_mx_linear: true
   use_turbo_float8_linear: true
