--- a/examples/torchtitan/configs/MI300X/deepseek_v3_671b-pretrain.yaml
+++ b/examples/torchtitan/configs/MI300X/deepseek_v3_671b-pretrain.yaml
@@ -39,7 +39,7 @@ modules:
 
       training:
         debug_moe_force_load_balance: true
-        local_batch_size: 14
+        local_batch_size: 16
         seq_len: 4096
         max_norm: 1.0            # grad norm clipping
         steps: 15
@@ -69,13 +69,13 @@ modules:
         selective_ac_option: "op" # 'int' = ac every positive int layer or 'op', ac based on ops policy
 
       compile:
-        enable: false
+        enable: true
         components: ["model", "loss"]     # ["model", "loss"]
 
       primus_turbo:
         enable_primus_turbo: true
         use_turbo_mx_linear: false
-        use_turbo_float8_linear: false
+        use_turbo_float8_linear: true
         enable_attention_float8: false
         use_classic_attention: true
         use_turbo_grouped_mm: true
