--- a/examples/megatron/exp_pretrain.yaml
+++ b/examples/megatron/exp_pretrain.yaml
@@ -37,7 +37,7 @@ modules:
       # profile_step_end: 7
       # profile_step_start: 6
 
-      # hyber parameters
+      # hyper parameters
       train_iters: 3
       micro_batch_size: 1
       global_batch_size: 16
