--- a/tests/trainer/test_megatron_trainer.yaml
+++ b/tests/trainer/test_megatron_trainer.yaml
@@ -24,7 +24,7 @@ modules:
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 5
 
-      # hyber parameters
+      # hyper parameters
       train_iters: 3
       micro_batch_size: 1
       global_batch_size: ${PRIMUS_GLOBAL_BATCH_SIZE:8}
