--- a/examples/megatron/configs/MI300X/grok2-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/grok2-pretrain.yaml
@@ -20,7 +20,7 @@ modules:
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 50
 
-      # hyber parameters
+      # hyper parameters
       train_iters: 10
       micro_batch_size: 2
       global_batch_size: 128
