--- a/examples/megatron/configs/MI300X/deepseek_v2-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/deepseek_v2-pretrain.yaml
@@ -65,8 +65,8 @@ modules:
       moe_use_legacy_grouped_gemm: true
       # fused topk router with aux score
       moe_use_fused_router_with_aux_score: false
-      # pad 192/128 for deepseek attention
-      fused_padded_mla_attention: false
+      # MLA
+      multi_latent_attention: false
 
       # ckpt
       finetune: false
@@ -81,3 +81,24 @@ modules:
       disable_last_saving: true
       ckpt_format: torch
       eval_iters: 0
+
+      # Turbo
+      enable_primus_turbo: true
+      use_turbo_attention: true
+      use_turbo_grouped_mlp: true
+
+      # deepep
+      use_turbo_deepep: true
+
+      # 64 or 80 for ep8, 32 for ep16-64 is best practice
+      turbo_deepep_num_cu: 64
+      turbo_deepep_use_comm_stream: false
+
+      # sync-free moe support stage 0-3, 0 means not use sync-free moe
+      # stage 3 is completely no gpu-cpu sync in MoE, but cost more memory
+      # stage 2 is recommended for better performance
+      turbo_sync_free_moe_stage: 2
+
+      # Cross entropy flags
+      # cross_entropy_fusion_impl: "te"
+      # cross_entropy_loss_fusion: true
