--- a/examples/megatron/configs/MI355X/deepseek_v2_lite-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/deepseek_v2_lite-pretrain.yaml
@@ -86,6 +86,9 @@ modules:
 
       # deepep
       use_turbo_deepep: false
+      moe_shared_expert_overlap: false
+      moe_router_dtype: fp32
+
       # 64 or 80 for ep8, 32 for ep16-64 is best practice
       turbo_deepep_num_cu: 64
       turbo_deepep_use_comm_stream: false
